css/styles.css
.container-md {
  padding: 30px;
  margin:auto;
}

.sidebar {
  width: 120px;
  height: 1200px;
  padding:12px;
  border: 1px solid lightgray;
  margin:auto;
  float:left;
  font-family:Arial, Helvetica, sans-serif;
  background-color: white;
  font-size: 10px;
}

.well {
  text-align:center;
}

.img-a {
  height: 400px;
  width: 300px;
  margin-bottom: 0px;
}

img {
  height: 100px;
  length: 100px;
}

h2 {
  font-size: 12px;
}

p {
  font-size: 10px;
  font-family: Arial, Helvetica, sans-serif;
}

body{
  background-image: url(https://images-na.ssl-images-amazon.com/images/I/81Ttgh59ZkL._AC_SL1467_.jpg);
}

